--- a/index.html
+++ b/index.html
@@ -157,6 +157,36 @@
             </div>
         </div>
     </div>
+    <div class="rating">
+        <div class="rating-btn">
+            <button class="btn"><p>Phản hồi</p></button>
+        </div>
+        <div class="rating-box text-center">
+            <h5>Bạn có hài lòng khi sử dụng Rever?</h5>
+            <div class="d-flex justify-content-between">
+                <button class="btn angry-emj">
+                    <span></span>
+                    <p>Ghét</p>
+                </button>
+                <button class="btn frown-emj">
+                    <span></span>
+                    <p>Không thích</p>
+                </button>
+                <button class="btn poker-emj">
+                    <span></span>
+                    <p>Không thích</p>
+                </button>
+                <button class="btn like-emj">
+                    <span></span>
+                    <p>Không thích</p>
+                </button>
+                <button class="btn love-emj">
+                    <span></span>
+                    <p>Không thích</p>
+                </button>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
